<resources>
    <string name="app_name">SchoolApp</string>

    <string name="rupess">Rs.</string>
    <string name="currency">$</string>
    <string name="done">Done</string>
    <string name="view_all">View All</string>
    <string name="today_classes">Today Classes</string>
    <string name="classes">Classes</string>
    <string name="track_school_bus">Track school bus</string>
    <string name="student_activities">Student Activities</string>
    <string name="activities">Activities</string>
    <string name="events">Events</string>
    <string name="news_updates">News/Updates</string>
    <string name="homework">Home Work</string>
    <string name="subject">Subject</string>
    <string name="class_title">Class</string>
    <string name="student_profile">Student Profile</string>

    <string name="get_started">GET STARTED</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="signup">Sign Up</string>

    <string name="regmobno">Your Registered Mobile Number</string>
    <string name="sign_up_getstarted">Get Started</string>
    <string name="already_have_an_account">Already you have an Account</string>

    <string name="otp_text">Enter One Time Password(OTP)\nSent to your Mobile Number\n%1$s</string>
    <string name="resend_otp">Re-Send OTP</string>
    <string name="submit_otp">Submit OTP</string>
    <string name="otp">Enter OTP here</string>

    <string name="get_reg_done">Get your Registration Done</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reg_submit">Submit</string>

    <string name="thank_you">Thank You</string>
    <string name="sample_name">Mr. Jack Daniel</string>
    <string name="track_study">Now you can Track your Children\'s Study Activities</string>
    <string name="title_activity_student_dash_board">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <array name="tab_name">
        <item>Home</item>
        <item>Attendance</item>
        <item>Bus</item>
        <item>Chat</item>
        <item>More</item>
    </array>

    <string name="dashboard_head_title">Dashboard</string>
    <string name="attendance_head_title">Attendance</string>
    <string name="bus_head_title">Bus</string>
    <string name="chat_head_title">Chat</string>
    <string name="more_head_title">More</string>
    <string name="fee_details">Fee Details</string>
    <string name="exam_result">Exam and Results</string>
    <string name="student_grade">Grade</string>
    <string name="profile">Profile</string>
    <string name="time_table">Time Table</string>
    <string name="my_attendance">My Attendance</string>

    <string name="installment_text">Next Installment</string>
    <string name="due_text">Due on</string>
    <string name="fee_pay_histroy">Fee payment History</string>
    <string name="pay_now">Pay Now</string>
    <string name="fee_break_down">Fee Breakdown</string>
    <string name="receipt_no">Receipt No.</string>
    <string name="date">Date</string>
    <string name="submission_date">Submission Date</string>
    <string name="amount">Amount</string>
    <string name="grand_total">Grand Total</string>
    <string name="details">Details</string>

    <string name="starts_from">Starts From</string>
    <string name="grade">Grade</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="add_home_work">Add Home Work</string>
    <string name="add_time_table">Add Time Table</string>
    <string name="apply_leave">Apply Leave</string>
    <string name="home_work_title">Home Work Title</string>
    <string name="type_of_leave">Type of Leave</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="add_new_time_table">Add New Time Table</string>
    <string name="leaves_history">Leave History</string>

    <string name="attendance_for_all_months">Attendance For All Months</string>
    <string name="months">Months</string>
    <string name="present">Present</string>
    <string name="percentage">Percentage</string>

    <string name="food_menu">Food Menu</string>

    <string name="subjectandsyllabus">Subjects and Syllabuss</string>
    <string name="downloadtimetable">Download Time Table</string>

    <string name="students_on_leave">Students On Leave</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>

    <string name="messages_header_title">Messages</string>

    <string name="move_to_complete">Move to Complete</string>
    <string name="transport">Transport</string>

    <string name="subject_and_syllabus">Subjects and Syllabus</string>

    <string name="good_mrng">Good Morning</string>


</resources>
