<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    android:weightSum="2"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="0.8">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/success_login"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/txtvw_thank_u"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/thank_you"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_size_large"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_parent_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/sample_name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_size_extra_large"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:text="@string/track_study"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_size_normal" />


        <Button
            android:id="@+id/btn_done"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="55dp"
            android:background="@drawable/round_button"
            android:text="@string/done"
            android:onClick="doneClick"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
