<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context=".Login">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.3">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp">


        <TextView
            android:id="@+id/txtvw_reg_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:text="@string/get_reg_done"
            android:textSize="@dimen/font_size_large"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/edtxt_create_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/round_edittext"
            android:hint="@string/create_password"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/edtxt_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/round_edittext"
            android:hint="@string/confirm_password"
            android:textAlignment="center" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:gravity="center"
        android:padding="5dp">

        <Button
            android:id="@+id/btn_reg_submit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="55dp"
            android:layout_marginRight="55dp"
            android:background="@drawable/round_button"
            android:onClick="regSubmit"
            android:text="@string/reg_submit"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>