<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fee_payment_history_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/fee_history_header"
        android:layout_width="match_parent"
        android:layout_height="25sp"
        android:background="@color/light_sky_blue"
        android:gravity="center"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            android:id="@+id/monthNamehead"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/months"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/presenthead"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/present"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/precentagehead"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/percentage"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_medium"
            android:textStyle="bold" />

    </LinearLayout>

    <ListView
        android:id="@+id/listview_fee_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>

</LinearLayout>