<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:layout_gravity="center"
        android:paddingTop="10dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/logo" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="0.20">

        <EditText
            android:id="@+id/edtxt_regmobileno"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/round_edittext"
            android:hint="@string/regmobno"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btnsignupgetstarted"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_button"
            android:text="@string/sign_up_getstarted"
            android:onClick="getStartedWithMobile"
            android:textColor="#ffffff"
            android:textAllCaps="false"
            android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="SAMPLE TEXT"
                android:textColor="@android:color/holo_red_light"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:textSize="15dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/txt_already_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="#C8C8C8"
            android:layout_marginBottom="20dp"
            android:textSize="15dp" />


        <Button
            android:id="@+id/btn_sign_up_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="55dp"
            android:layout_marginRight="55dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_button"
            android:textAllCaps="false"
            android:text="@string/login"
            android:onClick="login"
            android:textColor="#ffffff"
            android:textStyle="bold" />


    </LinearLayout>

</LinearLayout>