<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/next_installment_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/square_button"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/intallment_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/installment_text"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_normal"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/currency_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_extra_xxlarge"
            android:textStyle="bold"
            android:layout_marginRight="10dp"
            android:text="@string/currency"/>

        <TextView
            android:id="@+id/installment_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_extra_xxxlarge"
            android:textStyle="bold"
            android:text="55,000.00"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/due_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_normal"
            android:textStyle="normal"
            android:layout_marginRight="10dp"
            android:text="@string/due_text"/>

        <TextView
            android:id="@+id/due_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_normal"
            android:textStyle="normal"
            android:text="08/10/2018"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_pay_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/round_button"
        android:text="@string/pay_now"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textStyle="normal" />

    <include
        android:id="@+id/fee_break_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        layout="@layout/text_with_image"/>

    <LinearLayout
        android:id="@+id/fee_layout"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:visibility="gone"
        android:layout_height="300dp">

        <ListView
            android:id="@+id/fee_listview"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:divider="@android:color/transparent" android:dividerHeight="20dp"
            android:layout_height="wrap_content"></ListView>

    </LinearLayout>

</LinearLayout>