<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/homework_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_bg"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:weightSum="11">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <include
            android:id="@+id/class_name_spinner"
            layout="@layout/drop_down_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-4dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/homework"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_extra_large"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <include
            android:id="@+id/home_work_title_include"
            layout="@layout/editfield_with_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <include
            android:id="@+id/home_work_date_include"
            layout="@layout/date_in_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <include
            android:id="@+id/subject_name_spinner"
            layout="@layout/drop_down_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#ffffff"></View>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <include
            android:id="@+id/home_work_submission_date_include"
            layout="@layout/date_in_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <include
            android:id="@+id/allocation_for_spinner"
            layout="@layout/drop_down_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#ffffff"></View>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2">

        <EditText
            android:id="@+id/edit_text_details"
            android:layout_width="match_parent"
            android:layout_gravity="bottom"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:inputType="text"
            android:hint="@string/details"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_small" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:gravity="center"
        android:padding="5dp">

        <Button
            android:id="@+id/addHomeWork"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="55dp"
            android:layout_marginRight="55dp"
            android:background="@drawable/round_button"
            android:text="@string/add_home_work"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
